# excelbind

./: .gitignore  .gitmodules  .readthedocs.yaml  LICENSE  Pipfile  README.md  TODO.md  azure-pipelines-1.yml  azure-pipelines.yml  excelbind.sln  make.cmd  pytest.ini
Binaries/Win32/Release/: excelbind.xll
Binaries/x64/: excelbind.xll
Binaries/x64/Release/: excelbind.xll
Binaries/x86/: excelbind.xll
docs/: building.rst  conf.py  examples.rst  getting_started.rst  index.rst  troubleshooting.rst  type_conversion.rst
examples/: basic_functions.py  excelbind.conf  excelbind_export.py
src/: CMakeLists.txt
src/excelbind/: chrono.h  configuration.cpp  configuration.h  excelbind.cpp  excelbind.h  excelbind.sln  excelbind.vcxproj  excelbind.vcxproj.filters  execute_python.cpp  fct_exports.asm  functionRegistration.cpp  functionRegistration.h  function_registration.cpp  function_registration.h  pythonFunctionAdapter.cpp  pythonFunctionAdapter.h  python_function_adapter.cpp  python_function_adapter.h  scriptManager.cpp  scriptManager.h  script_manager.cpp  script_manager.h  temp_script.py  typeConversion.cpp  typeConversion.h  type_conversion.cpp  type_conversion.h
src/excelbind/project_properties/: win32_debug.props  win32_release.props  x64_debug.props  x64_release.props
test/: conftest.py  excel_test_utilities.py  test_execute_python.py  test_type_handling.py
test/fixtures/: basic_functions.py
test/utilities/: env_vars.py  excel.py
